WIP- Improvement idempotency, NOTE- transactions are not implemented as this is just redis.
